<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_setting"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".setting">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tabColor"
        app:title="Setting"
        app:titleTextColor="@color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="45sp"
        android:text="@string/parameters"
        android:layout_marginBottom="16dp"
        android:textColor="#000000"
        android:layout_marginStart="16dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_margin="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:hint="Start Time"
            android:inputType="date" />

        <EditText
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:hint="End Time"
            android:inputType="date"/>
        <Button
            style="@style/button_style"
            android:layout_margin="8dp"
            android:text="@string/enter"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="102dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_selector"
                android:gravity="center"
                android:hint="@string/enter_your_country"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="23sp" />

            <Button
                style="@style/button_style"
                android:layout_marginTop="18dp"
                android:text="@string/enter" />
        </LinearLayout>

        <ImageView
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/slash"
            android:src="@drawable/divide_mathematical_sign" />



            <ImageView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:contentDescription="@string/speech"
                android:src="@drawable/microphone" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="1dp"
        android:background="@color/black"/>

</LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navmenu_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/drawer_header"
        app:itemIconTint="@color/menu_header"
        app:menu="@menu/icon_menu" />
</androidx.drawerlayout.widget.DrawerLayout>